fixed follow button check icon clipping

--- a/app/assets/stylesheets/_asmcss.scss
+++ b/app/assets/stylesheets/_asmcss.scss
@@ -227,7 +227,8 @@ button, .button {
         width:11px;
         height:11px;
         background-image: url(/assets/icon-success-check-green.png);
-        background-size: cover;
+        background-size: 100%;
+        background-repeat: no-repeat;
       }
     }
   }
